--- a/WebContent/Login.html
+++ b/WebContent/Login.html
@@ -20,7 +20,8 @@ $(document).ready(function(){
    			});
    $("a").click(function()
 						{
-	   						$.get("https://localhost:8000");
+	   						//$.get("https://localhost:8000");
+	   						$("p").hide();
 						}	   
    
    )
@@ -43,7 +44,7 @@ html { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; 
 		
 	</div>
 
-
+	<form method="post" action="myfirst.js" ></form>
 	<div class="vis-3 pos-3 size-2 cont-2">
 		<div class="vis-4 pos-4 size-3 cont-3">
 			<p class="para-2"><span class="font-2">User</span></p>
@@ -63,7 +64,7 @@ html { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; 
 	</div>
 
 	 <div class="vis-9 pos-9 size-8 cont-8">
-		<a class="font-4 button vis-10 size-9" href = "#">LogIn</a>
+		<a class="font-4 button vis-10 size-9" type = "submit" >LogIn</a>
 	</div>	 	
 </div>
 
